# omnilab

./: .gitignore  CLAUDE.md  LICENSE  README.md  mkdocs.yml  project-spec-v1.md
.github/workflows/: build-host-iso.yml  build-project-images.yml  smoke-tests.yml  test-cli.yml
cli/omnilab/: README.md  pyproject.toml
cli/omnilab/omnilab/: __init__.py  __main__.py  _output.py  _safety.py  clean.py  cli.py  gpu.py  inspect.py  inspect_sources.py  inspect_tui.py  manifest.py  observe.py  pair.py  podman.py  record.py  template.py  tune.py
cli/omnilab/omnilab/templates/: ros-jazzy-gz-harmonic.yaml
cli/omnilab/tests/: test_agent_loop.py  test_clean.py  test_doctor_json.py  test_inspect.py  test_manifest.py  test_new_command.py  test_observe.py  test_output.py  test_pair.py  test_podman_args.py  test_record.py  test_safety.py  test_template.py  test_tune.py
docs/: cli-conventions.md  index.md
docs/examples/observers/: arm_6dof.yaml  mobile_2d.yaml  quadruped.yaml
host/: Containerfile  config.toml  config.toml.dev  hello-omnilab
host/overlay/: README.md
projects/eyrc-template/: README.md
projects/ros-jazzy-base/: README.md
projects/ros-jazzy-gz-harmonic/: Containerfile  README.md  smoke-test.sh
skills/llm-log-analyzer/: README.md
templates/micro-ros-blink/: template.yaml
templates/micro-ros-blink/files/: README.md  (+1 more)
templates/nav2-base/: template.yaml
templates/quadruped-walker/: template.yaml
tests/perf-check/: README.md
tests/smoke-boot/: README.md
tests/smoke-hw/: README.md
tests/smoke-nvidia/: README.md
tests/smoke-sim/: README.md
(+9 files in other folders)
