[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omnilab"
version = "0.1.0"
description = "OmniLab CLI — drives project containers on the OmniLab host."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "OmniLab contributors" },
]
readme = "README.md"
dependencies = [
  "typer>=0.12",
  "pydantic>=2.5",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]
tui = [
  "textual>=0.78",
]

[project.scripts]
omnilab = "omnilab.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["omnilab"]

[tool.hatch.build.targets.sdist]
include = ["omnilab/**", "tests/**", "README.md", "pyproject.toml"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL"]
ignore = [
  "PLR2004",  # magic numbers — false-positive heavy in tests
  "PLR0913",  # too many args — typer commands legitimately have many
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101", "B008", "E501", "PLC0415"]  # asserts + CliRunner pattern + lazy test imports
"omnilab/cli.py" = ["B008", "PLC0415"]  # typer needs B008; lazy textual import lives here
"omnilab/inspect_tui.py" = ["PLC0415"]  # lazy textual import is intentional

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
